2003-03-06  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* ly/engraver-init.ly (ChordNamesContext): set
	minimumVerticalExtent

2003-03-05  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* input/test/time-signature-double.ly: new file 

	* input/regression/collision-head-chords.ly (texidoc): new file.

	* lily/type-swallow-translator.cc: add note swallow translator 

	* input/test/time-signature-double.ly: new file.

	* lily/type-swallow-translator.cc: add Rest_swallow_translator

	* ly/engraver-init.ly (ChordNamesContext): add Rest_swallow_translator
	(FiguredBassContext): idem.

	* VERSION (MY_PATCH_LEVEL): 1.7.14 released

	* input/mutopia/W.A.Mozart/*.ly (romanze): markup syntax updates. 

	* buildscripts/mf-to-table.py: add .pfa, .pfb target dependency.

	* stepmake/stepmake/metafont-rules.make ($(outdir)/%.pfb): remove
	.afm dependency

	* buildscripts/mf-to-table.py (write_fontlist): use new markup syntax

	* python/lilylib.py (make_page_images): add function.

	* scripts/ly2dvi.py (run_latex): include title in preview image.

	* scripts/lilypond-book.py (process_ly2dvi_blocks): call ly2dvi
	from lilypond-book for <ly2dvifile> tags in HTML.

	* scripts/ly2dvi.py (option_definitions): add --debug option to
	print out environment.

	* input/regression/tie-chord-partial.ly: new file.

2003-03-05  Heikki Junes <hjunes@cc.hut.fi>

	* lilypond.words: add 3

2003-03-05  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* scm/new-markup.scm (markup-function-list): add finger-markup

	* input/tutorial/brahms-tweaked.ly: new markup 

	* scm/bass-figure.scm (brew-one-figure): bugfix for large bass figures 

	* scm/new-markup.scm (brew-new-markup-molecule): robustness: don't
	crash when processing '() markup

	* input/regression/breathing-sign.ly (texidoc): add caesura example.

	* lily/breathing-sign.cc (railtracks): another caesura.

	* mf/feta-schrift.mf: caesura symbol. 

2003-03-04  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* scripts/convert-ly.py (FatalConversionError.conv): add