@@ -11,8 +11,10 @@ texidoc = "New markup syntax."
     \property Voice.TextScript \set #'molecule-callback = #brew-new-markup-molecule
     f'-\markup {
 		foo
-		\raise #0.2 \bold bar
-		\override #'(baseline-skip . 4) \column << baz bazr bla >>
+		\raise #0.2 \hbracket \bold bar
+		\override #'(baseline-skip . 4)
+
+		\bracket \column << baz bazr bla >>
 		\hspace #2.0
 		\override #'(font-family . music) {
 			\lookup #"noteheads-0"
